# pre-commit-hooks-django-migrations

./: .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: actions.yml  read_the_docs_publication.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
hooks/: apps.py  check_absent_migrations.py  makemigrations_check_absent.py
hooks/management/commands/: makemigrations_check_absent_command.py
pre_commit_absent_migrations/: apps.py  makemigrations_check_absent.py  settings.py
pre_commit_absent_migrations/management/commands/: makemigrations_check_absent_command.py
tests/: test_check_absent.py
