[metadata]
name = pre-commit-hooks-django
version = v0.4.0
description = Some useful hooks for Django development
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ecugol/pre-commit-hooks-django
author = Ivan Vedernikov
author_email = ecugol@gmail.com
license = MIT
license-file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.6.5

[options.entry_points]
console_scripts =
    check-absent-migrations = hooks.check_absent_migrations:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[wheel]
universal = 1

[flake8]
exclude =
    __pycache__,
    .git,
    .mypy_cache,
    .pytest_cache,
    .tox,
    .venv,
    .vscode,
    ./node_modules/*,
    */migrations/*,
    ./docs/*,
ignore = E501,T499,W503,D104, D105, D101, D100, E203, E501, W503, F401, D103, F403, D102, B950, B008
max-line-length = 120
mypy_config = setup.cfg
select = B,C,D,E,F,I,W,T4,B9

[zest.releaser]
python-file-with-version = pre_commit_hooks_django_migrations/__init__.py

[coverage:run]
branch = True
omit =
    .tox/*
    .venv/*
    */asgi.py
    */migrations/*
    */tests/*
    */wsgi.py
    manage.py
source = .

[tool.black]
exclude =
    __pycache__,
    .git,
    .mypy_cache,
    .pytest_cache,
    .tox,
    .venv,
    .vscode,
    node_modules,
    */migrations/*,
    */node_modules/*,

[mypy]
ignore_missing_imports=True
exclude =
    __pycache__,
    .git,
    .mypy_cache,
    .pytest_cache,
    .tox,
    .venv,
    .vscode,
    node_modules,
    */migrations/*,
    .fh_app_template/*,
    */node_modules/*,
    */docs/*,

[tool.isort]
line_length=120
combine_as_imports = true
default_section = "THIRDPARTY"
known_third_party = "django"
profile = "black"
skip =
    __pycache__,
    .git,
    .mypy_cache,
    .pytest_cache,
    .tox,
    .venv,
    .vscode,
    node_modules,
    */migrations/*,
    .fh_app_template/*,
    */node_modules/*,

[mypy-*.migrations.*]
# Django migrations should not produce any errors:
ignore_errors = True

[testenv:report]
commands = coverage report
deps = coverage~=5.3.0

[testenv:reporthtml]
commands = coverage html
deps = coverage~=5.3.0

[testenv:reportxml]
commands = coverage xml -o test-reports/coverage.xml
deps = coverage~=5.3.0

[tox:tox]
envlist = coverage
skipsdist = True
